* Make-lang.in (CHILL.dvi): New target.         (CHILL.mostlyclean): Remove remnants of old runtime library structure.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@26028 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ch/Make-lang.in
+++ b/gcc/ch/Make-lang.in
@@ -106,6 +106,7 @@ CHILL.all.build: chill
 CHILL.all.cross: chill-cross
 CHILL.start.encap: chill
 CHILL.rest.encap:
+CHILL.dvi: chill.dvi
 
 CHILL.info: ch/chill.info
 
@@ -162,7 +163,6 @@ CHILL.uninstall:
 
 CHILL.mostlyclean:
 	-rm -f chill.install ch/*.o ch/ch-version.c
-	-cd ch/runtime && $(MAKE) mostlyclean
 CHILL.clean:
 CHILL.distclean:
 	-rm -f ch/config.status ch/Makefile
