* alias.c (alias_set_compare): Remove. 	(record_alias_subset): Use splay_tree_compare_ints instaed of 	alias_set_compare. 	(init_alias_once): Likewise. 	* cse.c: Include splay-tree.h. 	(reg_qty): Remove. 	(reg_tick): Likewise. 	(reg_table): Likewise. 	(cse_reg_info): New structure. 	(cse_reg_info_free_list): New variable. 	(cse_reg_info_tree): Likewise. 	(cached_regno): Likewise. 	(cached_cse_reg_info): Likewise. 	(all_minus_one): Remove. 	(consec_ints): Likewise. 	(GET_CSE_REG_INFO): New macro. 	(REG_TICK): Likewise.  Use throughout instead of reg_tick. 	(REG_IN_TABLE): Likewise.  Use throughout instead of reg_in_table. 	(REG_QTY): Likewise.  Use throughout instead of reg_qty. 	(get_cse_reg_info): New function. 	(free_cse_reg_info): Likewise. 	(new_basic_block): Reinitialize cse_reg_info_tree instead of 	reg_tick, all_minus_one, and consec_ints. 	* Makefile.in (cse.o): Depend on splay-tree.h 	* splay-tree.h (splay_tree_compare_ints): Declare. 	* splay-tree.c (splay_tree_compare_ints): Define.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@26069 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -1515,7 +1515,8 @@ stupid.o : stupid.c $(CONFIG_H) system.h $(RTL_H) $(REGS_H) hard-reg-set.h \
    $(BASIC_BLOCK_H) insn-config.h reload.h flags.h toplev.h
 
 cse.o : cse.c $(CONFIG_H) system.h $(RTL_H) $(REGS_H) hard-reg-set.h flags.h \
-   real.h insn-config.h $(RECOG_H) $(EXPR_H) toplev.h output.h
+   real.h insn-config.h $(RECOG_H) $(EXPR_H) toplev.h output.h \
+   $(srcdir)/../include/splay-tree.h
 gcse.o : gcse.c $(CONFIG_H) system.h $(RTL_H) $(REGS_H) hard-reg-set.h flags.h \
    real.h insn-config.h $(RECOG_H) $(EXPR_H) $(BASIC_BLOCK_H) output.h
 resource.o : resource.c $(CONFIG_H) $(RTL_H) hard-reg-set.h system.h \
