--- a/gcc/ch/Makefile.in
+++ b/gcc/ch/Makefile.in
@@ -266,7 +266,7 @@ $(srcdir)/hash.h:
 	gawk '{ printf ("s/^%s,/%s,/\n", $$1, toupper ($$1)) }' < gperf.tmp > sed.tmp
 	sed -f sed.tmp < gperf.tmp > gperf.tmp2
 	cat $(srcdir)/gperf gperf.tmp2 > gperf.tmp
-	gperf -L KR-C -F ', 0, 0, 0' -D -E -S1 -p -j1 -i 1 -g -o -t -k'*' \
+	gperf -L C -F ', 0, 0, 0' -D -E -S1 -p -j1 -i 1 -g -o -t -k'*' \
 	  gperf.tmp > $(srcdir)/hash.h
 	$(RM) gperf.tmp gperf.tmp2 sed.tmp
 
