* Makefile.in (hash.h): Generate using gperf language 'C', not         'KR-C', so gperf uses the `const' keyword on strings.         * gxx.gperf (resword): Const-ify a char*.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@26081 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/Makefile.in
+++ b/gcc/cp/Makefile.in
@@ -245,7 +245,7 @@ $(PARSE_C) : $(srcdir)/parse.y
 # the C front-end already requires this if c-parse.gperf is changed,
 # so we should be consistent.
 $(srcdir)/hash.h: $(srcdir)/gxx.gperf
-	gperf -L KR-C -F ', 0, 0' -p -j1 -g -o -t -N is_reserved_word \
+	gperf -L C -F ', 0, 0' -p -j1 -g -o -t -N is_reserved_word \
 		'-k1,4,7,$$' $(srcdir)/gxx.gperf >$(srcdir)/hash.h
 
 spew.o : spew.c $(CONFIG_H) $(CXX_TREE_H) $(PARSE_H) $(srcdir)/../flags.h \
