--- a/gcc/java/Makefile.in
+++ b/gcc/java/Makefile.in
@@ -247,7 +247,7 @@ lex.c: keyword.h lex.h
 lang.o: $(srcdir)/java-tree.def
 
 keyword.h: keyword.gperf
-	gperf -L KR-C -F ', 0' -p -t -j1 -i 1 -g -o -N java_keyword -k1,3,$$ \
+	gperf -L C -F ', 0' -p -t -j1 -i 1 -g -o -N java_keyword -k1,3,$$ \
 	keyword.gperf > keyword.h
 
 jcf-path.o : jcf-path.c $(CONFIG_H) $(srcdir)/../system.h jcf.h
