--- a/Makefile.in
+++ b/Makefile.in
@@ -35,6 +35,7 @@ includedir=${prefix}/include
 oldincludedir=/usr/include
 infodir=${prefix}/info
 mandir=${prefix}/man
+gxx_include_dir=${includedir}/g++
 
 tooldir = $(exec_prefix)/$(target_alias)
 build_tooldir = $(exec_prefix)/$(target_alias)
