1999-04-02  Mark Mitchell  <mark@codesourcery.com> 	* tinfo.h (__class_type_info): Fix illegal declaration. 	* cp-tree.def (TEMPLATE_ID_EXPR): Update comment. 	* cp-tree.h (INHERITED_VALUE_BINDING_P): New macro. 	(IDENTIFIER_CLASS_VALUE): Improve documentation. 	(is_properly_derived_from): Declare. 	(invalidate_class_lookup_cache): Likewise. 	(maybe_maybe_note_name_used_in_class): Likewise. 	(note_name_declared_in_class): Likewise. 	(push_using_decl): Remove duplicate declaration. 	(id_in_current_class): Remove declaration. 	(push_class_binding): Change prototype. 	(clear_identitifer_class_values): Declare. 	* call.c (is_properly_derived_from): Make it global. 	(build_new_function_call): Be careful about updating candidates. 	(build_new_method_call): Handle COMPONENT_REFs.  Don't crash when 	asked to make illegal calls. 	* class.c: Include splay-tree.h. 	(class_stack_node): Add names_used slot. 	(check_member_decl_is_same_in_complete_scope): Remove. 	(add_method): Fix comment.  Push the declaration into class 	scope. 	(finish_struct_1): When popping the class, pop the bindings too. 	Remove check for data member/function member conflict. 	(finish_struct): Remove calls to 	check_member_decl_is_same_in_complete_scope.  Change calls to 	popclass. 	(pushclass): Clear names_used in the class stack entry. 	Use invalidate_class_lookup_cache to remove cached entries, rather 	than magic values with popclass.  Clear IDENTIFIER_CLASS_VALUE 	before entering a new class.  Remove dead code.  Don't mess with 	current_function_decl when pushing declarations. 	(invalidate_class_lookup_cache): New function, split out from ... 	(popclass): Here.  Clean up names_used on our way out. 	(instantiate_type): Adjust. 	(build_self_reference): Don't push the declaration here. 	(maybe_note_name_used_in_class): New function. 	(note_name_declared_in_class): Likewise. 	* decl.c (add_binding): Change prototype. 	(find_class_binding_level): New function. 	(innermost_nonclass_level): Likewise. 	(curre

--- a/gcc/cp/Makefile.in
+++ b/gcc/cp/Makefile.in
@@ -267,7 +267,8 @@ typeck2.o : typeck2.c $(CONFIG_H) $(CXX_TREE_H) $(srcdir)/../flags.h \
 typeck.o : typeck.c $(CONFIG_H) $(CXX_TREE_H) $(srcdir)/../flags.h $(RTL_H) \
   $(EXPR_H) $(srcdir)/../system.h $(srcdir)/../toplev.h
 class.o : class.c $(CONFIG_H) $(CXX_TREE_H) $(srcdir)/../flags.h \
-  $(srcdir)/../system.h $(srcdir)/../toplev.h
+  $(srcdir)/../system.h $(srcdir)/../toplev.h \
+  $(srcdir)/../../include/splay-tree.h
 call.o : call.c $(CONFIG_H) $(CXX_TREE_H) $(srcdir)/../flags.h \
   $(srcdir)/../system.h $(srcdir)/../toplev.h
 friend.o : friend.c $(CONFIG_H) $(CXX_TREE_H) $(srcdir)/../flags.h $(RTL_H) \
