--- a/merged-arm-thumb-backend-branch/gcc/configure.in
+++ b/merged-arm-thumb-backend-branch/gcc/configure.in
@@ -831,6 +831,10 @@ changequote([,])dnl
 		tm_file=arm/unknown-elf.h
 		tmake_file=arm/t-arm-elf
 		;;
+	arm*-*-conix*)
+		tm_file=arm/conix-elf.h
+		tmake_file=arm/t-arm-elf
+		;;
         arm*-*-oabi)
 		tm_file=arm/unknown-elf-oabi.h
 		tmake_file=arm/t-arm-elf
